--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@ body {
   margin: 0;
   overflow: hidden;
 
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 
-  touch-action: none;
+  -ms-touch-action: none;
+      touch-action: none;
 }
 
 .speed {
